# spel-for-svenska-uppgift

./: CMakeLists.txt
assets/fonts/pixeloid-font/misc/: License-b142.txt
assets/texts/: main.txt
src/: main.cpp
src/texts/: main.txt
